Added project to the POM file of '/sdk/eventhubs' as module and dependency