@@ -35,14 +35,6 @@
     <tag>HEAD</tag>
   </scm>
 
-  <properties>
-    <!-- Configures the Java 9+ run to perform the required module exports, opens, and reads that are necessary for testing but shouldn't be part of the module-info. -->
-    <javaModulesSurefireArgLine>
-      --add-opens com.azure.messaging.eventhubs.checkpointstore.blob/com.azure.messaging.eventhubs.checkpointstore.blob=ALL-UNNAMED
-      --add-reads com.azure.messaging.eventhubs=ALL-UNNAMED
-    </javaModulesSurefireArgLine>
-  </properties>
-
   <dependencies>
     <dependency>
       <groupId>com.azure</groupId>
